# fastapi-pdp-websockets

./: .gitignore  Makefile  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  nginx-local.yml  nginx-prod.yml  prod.ci.yml  setup_env.sh  traefik.dev.toml  traefik.prod.toml
.github/workflows/: build_and_deploy.yml
app/: .env  .flake8  Makefile  app.py  gunicorn.conf.py  pyproject.toml  requirements.txt
app/alembic/: env.py
app/alembic/versions/: 16499f054678_initial_models.py  415653ec266b_add_posts_in_user_table.py  43203e572676_fix_relation_name.py  df2c5cfa2a83_create_chat_models.py
app/api/: deps.py
app/api/api_v1/: api.py  utils.py
app/api/api_v1/endpoints/: categories.py  login.py  posts.py  users.py  websockets.py
app/core/: config.py  security.py
app/crud/: __init__.py  base.py  crud_category.py  crud_post.py  crud_user.py
app/db/: __init__.py  base.py  db_conf.py  session.py
app/models/: __init__.py  base.py  category.py  chats.py  post.py  user.py
app/schemas/: __init__.py  category.py  common.py  post.py  token.py
app/tests/: common.py  conftest.py
app/tests/api/api_v1/: test_auth.py  test_categories.py  test_posts.py
app/utils/: __init__.py  chat.py
docker/dev/env/: .env
docker/dev/web/: Dockerfile
docker/dev/web/entrypoints/: entrypoint.sh  test.sh
docker/prod/env/: .env  .prod.proxy-companion.env
docker/prod/nginx/: Dockerfile  nginx.conf
docker/prod/nginx/staging/: Dockerfile
docker/prod/web/: prod.Dockerfile
docker/prod/web/entrypoints/: entrypoint.sh  test.sh
